--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                                     </li>
                                 </ul>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="register.html">Registrate</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
