--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="register.html">Registrate</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="sesion.html">Iniciar Sesión</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
