--- a/sesion.html
+++ b/sesion.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulario de Registro</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <!-- Agregar el enlace a Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -44,65 +45,65 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="register.html">Registrate</a>
-                            </li>
+                            
                         </ul>
                     </div>
                 </div>
             </nav>
         </nav>
     </header>
-  <div class="container mt-5">
-    <h2>Registro de Usuario</h2>
-    <form id="registerForm" onsubmit="handleSubmit(event)">
-      <div class="mb-3">
-        <label for="username" class="form-label">Correo Electrónico</label>
-        <input type="email" class="form-control" id="username" required>
-      </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="password" required>
-      </div>
-      <button type="submit" class="btn btn-primary">Registrarse</button>
+<div class="container mt-5">
+    <h2 class="text-center">Iniciar sesión</h2>
+    <form id="loginForm">
+        <div class="mb-3">
+            <label for="username" class="form-label">Usuario</label>
+            <input type="text" class="form-control" id="username" required>
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Contraseña</label>
+            <input type="password" class="form-control" id="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Iniciar sesión</button>
     </form>
-  </div>
+    <div id="error" class="mt-3 text-danger" style="display: none;"></div>
+</div>
 
-  <script>
-    // Función para hacer la solicitud POST usando fetch
-    const handleSubmit = async (event) => {
-      event.preventDefault();
+<!-- Agregar el script de Axios -->
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
+<script>
+    document.getElementById('loginForm').addEventListener('submit', async function (e) {
+        e.preventDefault();
 
-      try {
-        // Hacer la solicitud POST al backend usando fetch
-        const response = await fetch('https://back-techtool.vercel.app/api/register', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json', // Indica que los datos se enviarán en formato JSON
-          },
-          body: JSON.stringify({ username, password }), // Convierte el cuerpo de la solicitud en JSON
-        });
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
 
-        // Si la respuesta fue exitosa (status 201)
-        if (response.ok) {
-          const data = await response.json(); // Obtener la respuesta JSON
-          console.log('Usuario registrado:', data);
-          alert('Usuario registrado con éxito');
-        } else {
-          // Si la respuesta no fue exitosa
-          const errorData = await response.json();
-          console.error('Error al registrar el usuario:', errorData);
-          alert('Hubo un error al registrar el usuario');
+        try {
+            const response = await fetch('https://back-techtool.vercel.app/api/sesion', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json', // Indica que los datos se enviarán en formato JSON
+                },
+                body: JSON.stringify({ username, password }), // Convierte el cuerpo de la solicitud en JSON
+            });
+
+            // Verificar si la respuesta fue exitosa
+            if (response.ok) {
+                const data = await response.json(); // Obtener la respuesta JSON
+                console.log('Has ingresado con éxito:', data);
+                alert(`Bienvenido ${username}`);
+            } else {
+                // Si la respuesta no fue exitosa
+                const errorData = await response.json().catch((e) => { return { message: 'Error desconocido' }; });
+                console.error('Error al ingresar el usuario:', errorData);
+                alert(errorData.message || 'Hubo un error al ingresar el usuario');
+            }
+        } catch (error) {
+            console.error('Error en la solicitud:', error);
+            alert('Hubo un error al ingresar el usuario');
         }
-      } catch (error) {
-        console.error('Error en la solicitud:', error);
-        alert('Hubo un error al registrar el usuario');
-      }
-    };
-  </script>
+    });
+</script>
 
 </body>
 </html>
