--- a/contacto.html
+++ b/contacto.html
@@ -47,6 +47,12 @@
                                     </li>
                                 </ul>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="register.html">Registrate</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="sesion.html">Iniciar Sesión</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
