--- a/nosotros.html
+++ b/nosotros.html
@@ -33,6 +33,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contacto</a>
                             </li>
+                            
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
@@ -46,7 +47,14 @@
                                     <li><a class="dropdown-item"
                                             href="https://etraining.co/aprende-tecnologia-gratis-con-talento-tech/">Etraining</a>
                                     </li>
+                                    
                                 </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="register.html">Registrate</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="sesion.html">Iniciar Sesión</a>
                             </li>
                         </ul>
                     </div>
