--- a/register.html
+++ b/register.html
@@ -7,52 +7,55 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-            <!-- Navbar content -->
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    <img src="img/alcanzar.png" alt="" a class="navbar-brand" href="#" width="6%"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="nosotros.html">Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/techtool/contacto.html">Contacto</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Más
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item"
-                                            href="https://talentotech.gov.co/portal/">TalentoTech</a></li>
-                                    <li><a class="dropdown-item" href="https://www.unilibre.edu.co/">Universidad
-                                            Libre</a></li>
-                                    <li><a class="dropdown-item"
-                                            href="https://etraining.co/aprende-tecnologia-gratis-con-talento-tech/">Etraining</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="register.html">Registrate</a>
-                            </li>
-                        </ul>
-                    </div>
+  <header>
+    <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+        <!-- Navbar content -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <img src="img/alcanzar.png" alt="" a class="navbar-brand" href="#" width="6%"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Más
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item"
+                                        href="https://talentotech.gov.co/portal/">TalentoTech</a></li>
+                                <li><a class="dropdown-item" href="https://www.unilibre.edu.co/">Universidad
+                                        Libre</a></li>
+                                <li><a class="dropdown-item"
+                                        href="https://etraining.co/aprende-tecnologia-gratis-con-talento-tech/">Etraining</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="register.html">Registrate</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sesion.html">Iniciar Sesión</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
+            </div>
         </nav>
-    </header>
+    </nav>
+</header>
   <div class="container mt-5">
     <h2>Registro de Usuario</h2>
     <form id="registerForm" onsubmit="handleSubmit(event)">
