se cambian enlaces en programas

--- a/programas.html
+++ b/programas.html
@@ -150,7 +150,7 @@
                             propuestas de programadores con experiencia en desarrollo de software a medida.</p>
                     </div>
                     <div class="card-body">
-                        <a href="https://www.pccomponentes.com/" class="link">link</a>
+                        <a href="https://www.upwork.com/" class="link">link</a>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                             programador que mejor se adapte a tus necesidades.</p>
                     </div>
                     <div class="card-body">
-                        <a href="https://doctorportatil.co/" class="link">link</a>
+                        <a href="https://www.freelancer.com.co/" class="link">link</a>
                     </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                             para proyectos personalizados.</p>
                     </div>
                     <div class="card-body">
-                        <a href="https://www.facebook.com/laptopexperience/?_rdr" class="link">link</a>
+                        <a href="https://www.toptal.com/" class="link">link</a>
                     </div>
                 </div>
             </div>
