--- a/register.html
+++ b/register.html
@@ -12,7 +12,8 @@
         <!-- Navbar content -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <img src="img/alcanzar.png" alt="" a class="navbar-brand" href="#" width="6%"></a>
+              <a href="index.html"><img src="img/alcanzar.png" alt="" a class="navbar-brand" href="#" width="6%"></a></a>
+                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
